# bones-engine-cpp

./: .gitignore  CMakeLists.txt
include/bones/: engine.h
include/bones/platform/: window.h
src/: engine.cpp
src/platform/: window.cpp
